# furcate-nano

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  test_furcate_nano.py  test_ml_frameworks.py
configs/: agricultural-monitoring.yaml  default-config.yaml  forest-monitoring.yaml  urban-monitoring.yaml
docker/: Dockerfile  docker-compose.yml
docs/api/: README.md
docs/configuration/: README.md
docs/hardware/: README.md
docs/tutorials/: advanced_weather_ai.md  blockchain_integration.md  classroom.md  custom_ml_models.md  multi_device_collaboration.md
furcate_nano/: __init__.py  cli.py  config.py  core.py  edge_ml.py  error_handling.py  hardware.py  integrations.py  mesh.py  ml_persistence.py  network_clients.py  power.py  protocols.py  sensor_fusion.py  storage.py
furcate_nano/configs/: integrations.yaml
scripts/: install.sh  setup-raspberry-pi.sh
